--- a/public/styles/signup.css
+++ b/public/styles/signup.css
@@ -44,7 +44,7 @@ body{
     padding: 5px;
     border-style: solid;
     border-color: rgb(133, 126, 195);
-    height: 250px;
+    height: 270px;
     
 }
 .js-input{
@@ -57,7 +57,7 @@ body{
     cursor:-webkit-grab;
     height: 22px;
 }
-.login{
+.signup{
     
     background-color: rgb(133, 126, 195);
     color:rgb(234, 232, 252) ;
@@ -68,13 +68,8 @@ body{
     margin: 10px;
 
 }
-.signup{
-    color: blueviolet;
-    font-weight: normal;
-    font-size: 12px;
-    cursor: pointer;
-}
-.forgotpassword{
+
+.haveaccout{
     color: blueviolet;  
     font-weight: normal;
     font-size: 12px;
