--- a/public/styles/signup.css
+++ b/public/styles/signup.css
@@ -75,3 +75,12 @@ body{
     font-size: 12px;
     cursor: pointer;
 }
+.head{
+    font-size: 30px;
+    color: rgb(239, 239, 246);
+    text-shadow: -1px -1px 0 rgb(133, 126, 195),  
+    1px -1px 0 rgb(133, 126, 195),
+    -1px 1px 0 rgb(133, 126, 195),
+    1px 1px 0 rgb(133, 126, 195);
+    font-weight: normal;
+}
