--- a/views/regester.ejs
+++ b/views/regester.ejs
@@ -7,10 +7,11 @@
 <body>
     <div class="headbord">
         <div class="my-princess-diary">My Princess Diary</div>
+        <div class="head">Log In</div>
         <div class="mainbox">
             
             <div class="loginbox">
-                <p>Username:</p>
+                <p>username:</p>
                 <input id="username" class="js-input usernameinput" type="text">
                 <p>password:</p>
                 <input id="password" class="js-input passwordinput" type="password">
