--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,6 +7,7 @@
 <body>
     <div class="headbord">
         <div class="my-princess-diary">My Princess Diary</div>
+        <div class="head">Sigh Up</div>
         <div class="mainbox">
             
             <div class="loginbox">
