--- a/public/styles/regester.css
+++ b/public/styles/regester.css
@@ -21,11 +21,12 @@ body{
     text-align: center;
 }
 .my-princess-diary{
-    font-size: 40px;
+    font-size: 47px;
     text-align: center;
     color: rgb(22, 117, 114);
     font-weight: bold;
     margin-bottom: 30px;
+    margin-top: -30px;
 }  
 .mainbox{
     display: grid;
@@ -44,7 +45,8 @@ body{
     padding: 5px;
     border-style: solid;
     border-color: rgb(133, 126, 195);
-    height: 270px;
+    height: 290px;
+    width: 400px;
     
 }
 .js-input{
