--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -7,7 +7,7 @@
 <body>
     <div class="headbord">
         <div class="my-princess-diary">My Princess Diary</div>
-        <div class="nav-bar">
+        <div class="nav-bar"></div>
         </div>
     </div>
     <div class="week-board">
