--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -6,6 +6,7 @@
     </head>
 <body>
     <div class="headbord">
+        <div class="headbar"></div>
         <div class="my-princess-diary">My Princess Diary</div>
         <div class="nav-bar"></div>
         </div>
