login with username or mail

--- a/views/regester.ejs
+++ b/views/regester.ejs
@@ -11,7 +11,7 @@
         <div class="mainbox">
             
             <div class="loginbox">
-                <p>username:</p>
+                <p>username/email:</p>
                 <input id="username" class="js-input usernameinput" type="text">
                 <p>password:</p>
                 <input id="password" class="js-input passwordinput" type="password">
